tests/NormalTests/paczka1/fuzzy1/21171019.err
Error in line 2: tWKga S324 15,4
Error in line 4: eNo1qNs A444 7,8
Error in line 14: eNo1qNs S173 15,9
Error in line 20: eNo1qNs A444 8,0
Error in line 23: tWKga S173 51,6
Error in line 18: S173 S324 18,0
Error in line 25: S173 A444 3,4
Error in line 19: E8gePG42V7x S707 88,2
